...
}

enum Rating: String, Codable, CaseIterable {
    case fail = "FAIL"
    case holyShit = "HOLY_SHIT"
    case hard = "HARD"
    case easy = "EASY"
}

enum SessionDecision: String, Codable {
    case up_2
    case up_1
    case hold
...
